--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -3,7 +3,8 @@
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.searchuser.SearchUserActivity">
+        tools:context=".activity.searchuser.SearchUserActivity"
+        android:background="@drawable/background_gradient">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -15,10 +16,11 @@
 <!--                layout="@layout/search_user_toolbar" />-->
             <Button
                 android:id="@+id/backtoAllchatFragment"
+                style="@style/BtnStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="35sp"
                 android:text="Back"
-                android:textSize="26sp" />
+                android:textSize="14sp" />
 
             <EditText
                 android:id="@+id/search_user_toolbar"
@@ -27,11 +29,15 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginEnd="16sp"
                 android:layout_toEndOf="@+id/backtoAllchatFragment"
+                android:background="@drawable/border"
+                android:backgroundTint="#fff"
                 android:drawableLeft="@drawable/icons8_search_30"
+                android:ellipsize="end"
+                android:hint="Find User..."
                 android:inputType="text"
                 android:maxLines="1"
+                android:textColor="@color/black"
                 android:paddingStart="8sp"
-                android:hint="Find User..."
                 android:textSize="16sp" />
         </RelativeLayout>
 
